--- a/learn.ipynb
+++ b/learn.ipynb
@@ -786,6 +786,27 @@
     "10.陳述句\n",
     "</span>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i love you\n",
+      "i love you\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for i in range(1,11):\n",
+    "    if 2%i==0:\n",
+    "        print(\"i love you\")"
+   ]
   }
  ],
  "metadata": {
