--- a/learn.ipynb
+++ b/learn.ipynb
@@ -789,15 +789,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "i love you\n",
-      "i love you\n"
+      "1\n",
+      "2\n"
      ]
     }
    ],
@@ -805,7 +805,7 @@
     "\n",
     "for i in range(1,11):\n",
     "    if 2%i==0:\n",
-    "        print(\"i love you\")"
+    "        print(i)"
    ]
   }
  ],
