--- a/learn.ipynb
+++ b/learn.ipynb
@@ -796,16 +796,482 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "2\n"
+      "蘑菇燻雞不在串列裡\n",
+      "you are too small\n"
      ]
     }
    ],
    "source": [
+    "#檢查某質是否在串列\n",
+    "pizza=[\"瑪格麗特\",\"夏威夷\",\"德國臘腸\",\"香蕉巧克力\",\"地中海漁夫\"]\n",
+    "\"瑪格麗特\" in pizza\n",
+    "#檢測某質是否不在串列\n",
+    "notpizza=\"蘑菇燻雞\"\n",
+    "if notpizza not in pizza:\n",
+    "    print(notpizza+\"不在串列裡\")\n",
+    "#大小寫不同也可檢測\n",
+    "\"Iris\"==\"iris\"\n",
     "\n",
-    "for i in range(1,11):\n",
-    "    if 2%i==0:\n",
-    "        print(i)"
+    "#if-else-elif陳述句\n",
+    "age=17\n",
+    "if age>17:\n",
+    "    print(\"i love you\")\n",
+    "elif age<17:\n",
+    "    print(\"you are too small\")\n",
+    "else:\n",
+    "    print(\"i don't love you\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "陳述句實作建立alien_color變數並指定關聯green,yello,red等顏色  \n",
+    "1.檢測alien_color是否為green，如果是則印出訊息告訴玩家得5分  \n",
+    "2.如果是黃色則得10分\n",
+    "3.如果是紅色德15分\n",
+    "建立一個age變數\n",
+    "1.age小於2歲則為嬰兒\n",
+    "2.age大於等於2小於4則為學步階段\n",
+    "3.age大於等於4小於13則為兒童\n",
+    "4.age大於等於65等於老人"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "得十分\n",
+      "沒有幹\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1\n",
+    "alien_color=\"黃色\"\n",
+    "if alien_color==\"綠色\":\n",
+    "    print(\"得五分\")\n",
+    "elif alien_color==\"黃色\":\n",
+    "    print(\"得十分\")\n",
+    "elif alien_color==\"紅色\":\n",
+    "    print(\"得十五分\")\n",
+    "#2\n",
+    "fruits=[\"香蕉\",\"蘋果\",\"芒果\",\"芭樂\"]\n",
+    "my_fruit=\"幹\"\n",
+    "if my_fruit in fruits:\n",
+    "    print(\"有\"+my_fruit)\n",
+    "else:\n",
+    "    print(\"沒有\"+my_fruit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "陳述句加迴圈應用"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "為您加上蘑菇\n",
+      "我們沒青椒了幹\n",
+      "為您加上起司\n",
+      "沒東西了幹\n",
+      "我們為您添加蘑菇\n",
+      "抱歉今天沒有青椒\n",
+      "抱歉今天沒有起司\n"
+     ]
+    }
+   ],
+   "source": [
+    "#迴圈加上判斷式\n",
+    "requested_toppings=[\"蘑菇\",\"青椒\",\"起司\"]\n",
+    "for requested_toping in requested_toppings:\n",
+    "    if requested_toping==\"青椒\":\n",
+    "        print(\"我們沒青椒了幹\")\n",
+    "    else:\n",
+    "        print(f\"為您加上{requested_toping}\")\n",
+    "#檢查串列是否空\n",
+    "requested_toppings=[]\n",
+    "if requested_toppings:#加上這個判斷式來檢查串列有沒有東西\n",
+    "    for requested_toping in requested_toppings:\n",
+    "        if requested_toping==\"青椒\":\n",
+    "            print(\"我們沒青椒了幹\")\n",
+    "        else:\n",
+    "            print(f\"為您加上{requested_toping}\")\n",
+    "else:\n",
+    "    print(\"沒東西了幹\")\n",
+    "\n",
+    "#多重串列的用法\n",
+    "requested_toppings=[\"蘑菇\",\"青椒\",\"起司\"]\n",
+    "avaliable_toppings=[\"香蕉\",\"蘑菇\"]\n",
+    "for requested_topping in requested_toppings:\n",
+    "    if requested_topping in avaliable_toppings:\n",
+    "        print(\"我們為您添加\"+requested_topping)\n",
+    "    else:\n",
+    "        print(\"抱歉今天沒有\"+requested_topping) \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "練習，建立一個串列，要有5個使用者帳號，且要有一個是admin\n",
+    "1.對每個人產生不同的問候，admin要出現\"admin hello\"\n",
+    "2.刪除所有帳號，如果串列是空的就印出\"we need more user\"\n",
+    "建立一current_user串列要有5個帳號\n",
+    "1.再建立一個new_user串列至少有1-2個帳號跟current_user一樣\n",
+    "2.用迴圈訪遍new_user串列，對每個帳號檢測是否已被使用，且檢測時不分大小寫"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "welcome john\n",
+      "welcome kevin\n",
+      "hello admin\n",
+      "welcome josh\n",
+      "welcome amy\n",
+      "kevin 已經被使用\n",
+      "josh 已經被使用\n",
+      "amy 已經被使用\n",
+      "jeff 可以使用\n",
+      "JEFF 可以使用\n",
+      "JOSH 已經被使用\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1\n",
+    "accounts=[\"john\",\"kevin\",\"admin\",\"josh\",\"amy\"]\n",
+    "if accounts:\n",
+    "    for account in accounts:\n",
+    "        if account==\"admin\":\n",
+    "            print(\"hello\",account)\n",
+    "        else:\n",
+    "            print(\"welcome\",account)\n",
+    "#2\n",
+    "current_users=[\"john\",\"kevin\",\"admin\",\"josh\",\"amy\"]\n",
+    "new_users=[\"kevin\",\"josh\",\"amy\",\"jeff\",\"JEFF\",\"JOSH\"]\n",
+    "for new_user in new_users:\n",
+    "        if new_user.upper() in [user.upper() for user in current_users]:\n",
+    "            print(new_user,\"已經被使用\")\n",
+    "        else:\n",
+    "            print(new_user,\"可以使用\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "11.字典"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "green\n",
+      "5\n",
+      "你的新分數 15\n",
+      "{'color': 'green', 'point': 5, 'x_position': 25, 'y_position': 40}\n",
+      "{'x_position': 10, 'y_position': 20}\n",
+      "更改後的顏色 yellow\n",
+      "更改後的x位置 60\n",
+      "原始x_position:0\n",
+      "new x_position:2\n",
+      "{'point': 5}\n",
+      "this key is not exist\n"
+     ]
+    }
+   ],
+   "source": [
+    "#以字典存放特定關係\n",
+    "alien_0 = {'color':'green','point':5}#字典以key-value組成，在例子中 color=key green=value\n",
+    "print(alien_0['color'])\n",
+    "print(alien_0['point'])\n",
+    "new_point=10+alien_0['point']\n",
+    "print(\"你的新分數\",new_point)\n",
+    "#若要新增資訊\n",
+    "alien_0['x_position']=25\n",
+    "alien_0['y_position']=40\n",
+    "print(alien_0)\n",
+    "#也可以先新建一個空的字典\n",
+    "alien={}\n",
+    "alien['x_position']=10\n",
+    "alien['y_position']=20\n",
+    "print(alien)\n",
+    "#修改字典中某key對應的value\n",
+    "alien_0['color']=\"yellow\"\n",
+    "alien_0['x_position']=60\n",
+    "print(\"更改後的顏色\",alien_0['color'])\n",
+    "print(\"更改後的x位置\",alien_0['x_position'])\n",
+    "#舉個例子，若想追蹤以不同速度移動的外星人位置，首先存放外星人目前的速度，再以此決定外星人走多遠\n",
+    "alien={'x_position':0,'y_position':0,'speed':\"medium\"}\n",
+    "print(\"原始x_position:\"+str(alien['x_position']))\n",
+    "if alien['speed']==\"slow\":\n",
+    "    x_increse=1\n",
+    "elif alien['speed']==\"medium\":\n",
+    "    x_increse=2\n",
+    "elif alien['speed']==\"fast\":\n",
+    "    x_increse=3\n",
+    "alien['x_position']=alien['x_position']+x_increse\n",
+    "print(\"new x_position:\"+str(alien['x_position']))\n",
+    "#刪除key與value\n",
+    "alien_0 = {'color':'green','point':5}\n",
+    "del alien_0['color']\n",
+    "print(alien_0)\n",
+    "#透過get()來取值，在key值有可能不存在的情況下可以使用\n",
+    "alien_0 = {'color':'green','speed':\"slow\"}\n",
+    "point_value=alien_0.get(\"point\",\"this key is not exist\")\n",
+    "print(point_value)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "練習，使用字典存放人的資訊\n",
+    "1.包括人姓名、電話、住址、城市並印出\n",
+    "2.存放人們喜歡的數字，想出五個人並印出"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "陳奕君 0963660898 台灣 台北\n",
+      "snady喜歡的是:5\n",
+      "mike喜歡的是:6\n",
+      "jeff喜歡的是7\n",
+      "joe喜歡的是10\n",
+      "lin喜歡的是:1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1\n",
+    "people={\"name\":\"陳奕君\",\"phone\":\"0963660898\",\"address\":\"台灣\",\"city\":\"台北\"}\n",
+    "print(people[\"name\"],people[\"phone\"],people[\"address\"],people[\"city\"])\n",
+    "#2\n",
+    "number={\n",
+    "        \"sandy\":5,\n",
+    "        \"mike\" :6,\n",
+    "        \"jeff\" :7,\n",
+    "        \"joe\" :10,\n",
+    "        \"lin\":1,\n",
+    "       }\n",
+    "print(f\"snady喜歡的是:{number.get('sandy')}\\nmike喜歡的是:{number.get('mike')}\\njeff喜歡的是{number.get('jeff')}\\njoe喜歡的是{number.get('joe')}\\nlin喜歡的是:{number.get('lin')}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"font-size:24px\">\n",
+    "用迴圈歷遍字典的key**\n",
+    "</span>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sandy:5\n",
+      "mike:6\n",
+      "jeff:7\n",
+      "字典中的鍵值 sandy\n",
+      "字典中的鍵值 mike\n",
+      "字典中的鍵值 jeff\n",
+      "sandy是我朋友，他喜歡的數字是5\n",
+      "mike不是我朋友，他喜歡的數字是6\n",
+      "jeff不是我朋友，他喜歡的數字是7\n",
+      "eric這個人不在字典中的key\n",
+      "第1位jeff\n",
+      "第2位mike\n",
+      "第3位sandy\n"
+     ]
+    }
+   ],
+   "source": [
+    "number={\n",
+    "        \"sandy\":5,\n",
+    "        \"mike\" :6,\n",
+    "        \"jeff\" :7,\n",
+    "       }\n",
+    "for names,numbers in number.items():#names,numbers變數分別為key和value在字典中的值\n",
+    "    print(f\"{names}:{numbers}\")\n",
+    "#如果只想要歷遍字典中的key\n",
+    "for names in number.keys():\n",
+    "    print(\"字典中的鍵值\",names)\n",
+    "#進階用法，看人是否在朋友名單\n",
+    "friend=[\"羅志祥\",\"sandy\"]\n",
+    "for names in number.keys():\n",
+    "    favorite_number=number[names]\n",
+    "    if names in friend:\n",
+    "        print(f\"{names}是我朋友，他喜歡的數字是{favorite_number}\")\n",
+    "    else:\n",
+    "        print(f\"{names}不是我朋友，他喜歡的數字是{favorite_number}\")\n",
+    "#用keys()找出名字是否在字典中\n",
+    "if \"eric\" not in number.keys():\n",
+    "    print(\"eric這個人不在字典中的key\")\n",
+    "#可以用順序來查找字典\n",
+    "i=0\n",
+    "for numbers in sorted(number.keys()):\n",
+    "    i+=1\n",
+    "    print(f\"第{i}位{numbers}\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"font-size:24px\">\n",
+    "用迴圈歷遍字典的value**\n",
+    "</span>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "6\n",
+      "6\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "number={\n",
+    "        \"sandy\":5,\n",
+    "        \"mike\" :6,\n",
+    "        \"jeff\" :6,\n",
+    "       }\n",
+    "#如果只想要歷遍value\n",
+    "for numbers in number.values():\n",
+    "    print(numbers)\n",
+    "#如果想取出的value不重複\n",
+    "for numbers in set(number.values()):#用set()可以不出現重複的value\n",
+    "    print(numbers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "練習\n",
+    "1.將上一個練習的題目用迴圈改寫\n",
+    "2.建立一個字典存放三大河流及其流域國家，用迴圈對每條河印出一條訊息，並將key,value都印出來\n",
+    "3.建立一個會接受訪問的名單，有些人在字典中有些人不在，用迴圈遍訪名單對以受訪者印出感謝文字，對未受訪者印出邀請文字"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "姓名:sandy 最愛的數字:5\n",
+      "姓名:mike 最愛的數字:6\n",
+      "姓名:jeff 最愛的數字:7\n",
+      "姓名:joe 最愛的數字:10\n",
+      "姓名:lin 最愛的數字:1\n",
+      "尼羅河流經埃及\n",
+      "亞馬遜河流經巴西\n",
+      "長江流經中國\n",
+      "sandy已經接受過採訪謝謝\n",
+      "amy還沒接受過採訪謝謝\n",
+      "ada還沒接受過採訪謝謝\n",
+      "jeff已經接受過採訪謝謝\n",
+      "josh還沒接受過採訪謝謝\n",
+      "lin還沒接受過採訪謝謝\n",
+      "henry還沒接受過採訪謝謝\n",
+      "mike已經接受過採訪謝謝\n",
+      "joe還沒接受過採訪謝謝\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1\n",
+    "number={\n",
+    "        \"sandy\":5,\n",
+    "        \"mike\" :6,\n",
+    "        \"jeff\" :7,\n",
+    "        \"joe\" :10,\n",
+    "        \"lin\":1,\n",
+    "       }\n",
+    "for name,numbers in number.items():\n",
+    "    print(f\"姓名:{name} 最愛的數字:{numbers}\")\n",
+    "#2\n",
+    "the_river={\n",
+    "        \"尼羅河\":\"埃及\",\n",
+    "        \"亞馬遜河\" :\"巴西\",\n",
+    "        \"長江\" :\"中國\",\n",
+    "       }\n",
+    "for river,country in the_river.items():\n",
+    "    print(f\"{river}流經{country}\")\n",
+    "#3\n",
+    "people={\n",
+    "        \"sandy\":\"accept\",\n",
+    "        \"mike\" :\"accept\",\n",
+    "        \"jeff\" :\"accept\",\n",
+    "        \"joe\" :\"not\",\n",
+    "        \"lin\":\"not\",\n",
+    "       }\n",
+    "name_list=[\"sandy\",\"amy\",\"ada\",\"jeff\",\"josh\",\"lin\",\"henry\",\"mike\",\"joe\"]\n",
+    "for name in name_list:\n",
+    "    if name in people.keys() and people[name]==\"accept\":\n",
+    "        print(f\"{name}已經接受過採訪謝謝\")\n",
+    "    else:\n",
+    "        print(f\"{name}還沒接受過採訪謝謝\")\n",
+    "\n",
+    "\n"
    ]
   }
  ],
