--- a/learn.ipynb
+++ b/learn.ipynb
@@ -1210,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1233,7 +1233,8 @@
       "lin還沒接受過採訪謝謝\n",
       "henry還沒接受過採訪謝謝\n",
       "mike已經接受過採訪謝謝\n",
-      "joe還沒接受過採訪謝謝\n"
+      "joe還沒接受過採訪謝謝\n",
+      "{'sandy': 'accept', 'mike': 'accept', 'jeff': 'accept', 'joe': 'not', 'lin': 'not'}\n"
      ]
     }
    ],
@@ -1272,6 +1273,640 @@
     "        print(f\"{name}還沒接受過採訪謝謝\")\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "巢狀嵌套"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'color': 'green', 'point': 10}\n",
+      "{'color': 'yellow', 'point': 5}\n",
+      "{'color': 'yellow', 'point': 15}\n",
+      "{'color': 'green', 'point': 10, 'speed': 'fast'}\n",
+      "{'color': 'green', 'point': 10, 'speed': 'fast'}\n",
+      "{'color': 'green', 'point': 10, 'speed': 'fast'}\n",
+      "{'color': 'green', 'point': 10, 'speed': 'fast'}\n",
+      "{'color': 'green', 'point': 10, 'speed': 'fast'}\n",
+      "總共有 30 隻外星人\n",
+      "{'color': 'yellow', 'point': 5, 'speed': 'low'}\n",
+      "{'color': 'yellow', 'point': 5, 'speed': 'low'}\n",
+      "{'color': 'yellow', 'point': 5, 'speed': 'low'}\n",
+      "{'color': 'green', 'point': 10, 'speed': 'fast'}\n",
+      "{'color': 'green', 'point': 10, 'speed': 'fast'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#將字典和串列結合在一起\n",
+    "alien_0={'color':'green','point':10}\n",
+    "alien_1={'color':'yellow','point':5}\n",
+    "alien_2={'color':'yellow','point':15}\n",
+    "aliens=[alien_0,alien_1,alien_2]\n",
+    "for alien in aliens:\n",
+    "    print(alien)\n",
+    "#用range()函數隨機生成\n",
+    "aliens=[]\n",
+    "for alien_number in range(30):\n",
+    "    new_alien={'color':'green','point':10,'speed':'fast'}\n",
+    "    aliens.append(new_alien)\n",
+    "#展示前五隻外星人\n",
+    "for alien in aliens[0:5]:\n",
+    "    print(alien)\n",
+    "print(\"總共有\",len(aliens),\"隻外星人\")\n",
+    "#希望以不同顏色、速度、分數實現\n",
+    "aliens=[]\n",
+    "for alien_number in range(30):\n",
+    "    new_alien={'color':'green','point':10,'speed':'fast'}\n",
+    "    aliens.append(new_alien)\n",
+    "#修改\n",
+    "for alien in aliens[0:3]:\n",
+    "    if alien['color']==\"green\":\n",
+    "        alien['point']=5\n",
+    "        alien['color']=\"yellow\"\n",
+    "        alien['speed']=\"low\"\n",
+    "for alien in aliens[0:5]:\n",
+    "    print(alien)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "你點了一個薄餅披薩跟加點以下配料\n",
+      "蘑菇\n",
+      "青椒\n",
+      "jen最愛的語言有:\n",
+      "python\n",
+      "java\n",
+      "\n",
+      "\n",
+      "jeff最愛的語言有:\n",
+      "html\n",
+      "\n",
+      "\n",
+      "evan最愛的語言有:\n",
+      "go\n",
+      "sql\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#串列放字典裡\n",
+    "pizza={\n",
+    "    'crust':'薄餅',\n",
+    "    'toppings':['蘑菇','青椒'],#將配料弄成串列\n",
+    "}\n",
+    "print(f\"你點了一個{pizza['crust']}披薩跟加點以下配料\")\n",
+    "for topping in pizza['toppings']:\n",
+    "    print(topping)\n",
+    "\n",
+    "favorite_lau={\n",
+    "    'jen':['python','java'],\n",
+    "    'jeff':['html'],\n",
+    "    'evan':['go','sql'],\n",
+    "}\n",
+    "for name,language in favorite_lau.items():\n",
+    "    print(f\"{name}最愛的語言有:\")\n",
+    "    for languages in language:\n",
+    "        print(f\"{languages}\")\n",
+    "    print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "字典中的字典"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jeff的資訊:\n",
+      "username:jeff0963\n",
+      "phone:0963660898\n",
+      "address:紐約\n",
+      "\n",
+      "\n",
+      "tyson的資訊:\n",
+      "username:tyson0963\n",
+      "phone:0963660000\n",
+      "address:加州\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#若網站有多個使用者帳號且每個都是唯一，則使用者帳號可當為鍵，再在底下存放使用者資訊\n",
+    "users={\n",
+    "    'jeff':{\n",
+    "        'username':'jeff0963',\n",
+    "        'phone':'0963660898',\n",
+    "        'address':'紐約',\n",
+    "    },\n",
+    "    'tyson':{\n",
+    "        'username':'tyson0963',\n",
+    "        'phone':'0963660000',\n",
+    "        'address':'加州',\n",
+    "    }\n",
+    "}\n",
+    "for user,account in users.items():#user變數=使用者帳號 account變數=後面的字典\n",
+    "    print(f\"{user}的資訊:\")\n",
+    "    for program,information in account.items():\n",
+    "        print(f\"{program}:{information}\")\n",
+    "    print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "練習\n",
+    "1.製作幾個字典每個字典都用一種寵物命名，放入寵物種類及主人名字，放在pets的串列中並用迴圈將寵物資訊都印出\n",
+    "2.建立一個名為favorite_places的字典，在此字典中以三個人的名字為鍵，對每個人名存放1~3個喜歡的地方，用迴圈將資訊印出\n",
+    "3.建立一個city字典，三個城市名單做鍵，每個城市又關連到一個字典-建立三個鍵country、population、fact，把資訊都印出"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "這個種類是category 主人是馬爾濟斯\n",
+      "這個種類是master 主人是jeff\n",
+      "這個種類是category 主人是英短\n",
+      "這個種類是master 主人是jane\n",
+      "這個種類是category 主人是鴿子\n",
+      "這個種類是master 主人是john\n",
+      "jeff喜歡的國家是\n",
+      "中國\n",
+      "美國\n",
+      "jane喜歡的國家是\n",
+      "澳洲\n",
+      "泰國\n",
+      "緬甸\n",
+      "jack喜歡的國家是\n",
+      "英國\n",
+      "以下是台北的資訊:\n",
+      "country:台灣\n",
+      "population:100000\n",
+      "fact:首都\n",
+      "以下是東京的資訊:\n",
+      "country:日本\n",
+      "population:300000\n",
+      "fact:天皇所在地\n",
+      "以下是北京的資訊:\n",
+      "country:中國\n",
+      "population:2000000\n",
+      "fact:毛澤東故居\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1.\n",
+    "dog={\n",
+    "    'category':'馬爾濟斯',\n",
+    "    'master':'jeff',\n",
+    "}\n",
+    "cat={\n",
+    "    'category':'英短',\n",
+    "    'master':'jane',\n",
+    "}\n",
+    "chicken={\n",
+    "    'category':'鴿子',\n",
+    "    'master':'john',\n",
+    "}\n",
+    "pets=[dog,cat,chicken]\n",
+    "for pet in pets:\n",
+    "    for category,master in pet.items():\n",
+    "        print(f\"這個種類是{category} 主人是{master}\")\n",
+    "#2.\n",
+    "favorite_places={\n",
+    "    \"jeff\":[\"中國\",\"美國\"],\n",
+    "    \"jane\":[\"澳洲\",\"泰國\",\"緬甸\"],\n",
+    "    \"jack\":[\"英國\"],\n",
+    "}\n",
+    "for names,countries in favorite_places.items():\n",
+    "    print(f\"{names}喜歡的國家是\")\n",
+    "    for country in countries:\n",
+    "        print(f\"{country}\")\n",
+    "#3.\n",
+    "cities={\n",
+    "    \"台北\":{\n",
+    "        \"country\":\"台灣\",\n",
+    "        \"population\":100000,\n",
+    "        \"fact\":\"首都\",\n",
+    "    },\n",
+    "    \"東京\":{\n",
+    "        \"country\":\"日本\",\n",
+    "        \"population\":300000,\n",
+    "        \"fact\":\"天皇所在地\"\n",
+    "    },\n",
+    "    \"北京\":{\n",
+    "        \"country\":\"中國\",\n",
+    "        \"population\":2000000,\n",
+    "        \"fact\":\"毛澤東故居\"\n",
+    "    }\n",
+    "}\n",
+    "for city,info in cities.items():\n",
+    "    print(f\"以下是{city}的資訊:\")\n",
+    "    for information,informations in info.items():\n",
+    "        print(f\"{information}:{informations}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"font-size:24px\">\n",
+    "12.使用者輸入與while迴圈\n",
+    "</span>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ㄎ\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#讓使用者輸入\n",
+    "#massage = input(\"tell me something: \")\n",
+    "#print(massage)\n",
+    "prompt=\"hiihihiihhiiihihihih\"#也可以用變數代替提示文字\n",
+    "prompt+=\"\\niiifjfijijijijijij\"\n",
+    "name=input(prompt)\n",
+    "print(name)\n",
+    "#取得數值的輸入\n",
+    "age=int(input(\"hihihi\"))\n",
+    "print(age)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "while迴圈"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "hi\n",
+      "dd\n",
+      "正確!迴圈結束\n"
+     ]
+    }
+   ],
+   "source": [
+    "#while做數字運算\n",
+    "current_num=1\n",
+    "while current_num<=5:#印出1到5\n",
+    "    print(current_num)\n",
+    "    current_num+=1\n",
+    "#讓使用者決定甚麼時候結束\n",
+    "message=\"\"\n",
+    "while message !=\"quit\":\n",
+    "    message=input(\"請輸入quit來退出迴圈\")\n",
+    "    if message!=\"quit\":\n",
+    "        print(message)\n",
+    "print(\"正確!迴圈結束\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "使用旗標"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "恭喜通關\n",
+      "恩恩\n"
+     ]
+    }
+   ],
+   "source": [
+    "#善用boolen\n",
+    "#boolen滿足條件時做完後面的才跳出迴圈\n",
+    "active=True\n",
+    "while active:\n",
+    "    message=input(\"請輸入通關密語\")\n",
+    "    if message==\"quit\":\n",
+    "        print(\"恭喜通關\")\n",
+    "        active=False\n",
+    "    else:\n",
+    "        print(message,\"錯\")\n",
+    "    print(\"恩恩\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "使用break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "恭喜通關\n"
+     ]
+    }
+   ],
+   "source": [
+    "#break:當滿足條件後直接跳出迴圈不繼續執行後面的東西\n",
+    "while True:\n",
+    "    message=input(\"請輸入通關密語\")\n",
+    "    if message==\"quit\":\n",
+    "        print(\"恭喜通關\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print(message,\"錯\")\n",
+    "    print(\"恩恩\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "使用continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "#contiune會不執行剩下的程式，並回到開頭再進行檢測\n",
+    "current_num=0\n",
+    "while current_num<10:\n",
+    "    current_num+=1\n",
+    "    if current_num%2==0:\n",
+    "        continue#舉例:這題要找出所有奇數，2可以被2整除，因此遇到contiune不執行print(current_num)，回到開頭再進行檢測\n",
+    "    print(current_num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "實作，有家電影院根據不同年齡訂製票價，小於3免費，3~12收10元，大於12歲收15元，讓使用者輸入年齡並印出對應票價"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "收您5元\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    age=int(input(\"請輸入年齡\"))\n",
+    "    if age<3:\n",
+    "        print(\"收您免費\")\n",
+    "    elif age>=3 and age<=12:\n",
+    "        print(\"收您5元\")\n",
+    "    else:\n",
+    "        print(\"收您15元\")\n",
+    "    break\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "用while迴圈處理字典和串列"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Verity user:brian\n",
+      "Verity user:jack\n",
+      "Verity user:alice\n",
+      "以下使用者已經被驗證\n",
+      "brian\n",
+      "jack\n",
+      "alice\n",
+      "['狗', '馬', '天竺鼠', '老鼠']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#假設一個串列存放了網站新登錄但還沒驗證的使用者帳號，在驗證之後如何把它們搬移到已驗證的串列中\n",
+    "unconfired_users=[\"alice\",\"jack\",\"brian\"]\n",
+    "confired_user=[]\n",
+    "while unconfired_users:\n",
+    "    current_user=unconfired_users.pop()\n",
+    "    print(f\"Verity user:{current_user}\")\n",
+    "    confired_user.append(current_user)\n",
+    "print(\"以下使用者已經被驗證\")\n",
+    "for confired in confired_user:\n",
+    "    print(confired)\n",
+    "#假設一個串列裡有多個一樣的項目，若要刪除所有同項目時，可用while\n",
+    "pets=[\"狗\",\"貓\",\"貓\",\"貓\",\"馬\",\"天竺鼠\",\"老鼠\"]\n",
+    "while \"貓\" in pets:\n",
+    "    pets.remove(\"貓\")\n",
+    "print(pets)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "以使用者輸入來填入字典"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "我愛你,百岳\n",
+      "我愛他,阿里山\n"
+     ]
+    }
+   ],
+   "source": [
+    "responses={}\n",
+    "active=True\n",
+    "while active:\n",
+    "    name=input(\"你名字是啥\")#key\n",
+    "    response=input(\"你今天想爬哪座山\")#value\n",
+    "    responses[name]=response\n",
+    "    repeat=input(\"你想讓其他人回答嗎yes/no\")#設定終止條件\n",
+    "    if repeat==\"no\":                        \n",
+    "        active=False\n",
+    "for name,respond in responses.items():\n",
+    "        print(f\"{name},{respond}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "實作練習\n",
+    "1.建立snadwish_order串列，存放3種三明治名稱，再建立一個finished_sandwish串列，以迴圈遍訪snadwish_order串列，對每個三明治印出一條訊息，並移到finished_sandwish\n",
+    "2.在剛剛的snadwish_order串列放入至少3個pastrami，在程式一開始印出\"沒有pastrami了，並把串列裡的pastrami都刪除\n",
+    "3.寫一個程式訪查使用者夢想的度假地，用input取得受訪者名字和度假地點，存放到地點中並印出"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "我幫你做了歐姆蛋三明治\n",
+      "我幫你做了培根三明治\n",
+      "我幫你做了火腿三明治\n",
+      "我幫你做了鮪魚三明治\n",
+      "已做完三明治名單\n",
+      "歐姆蛋三明治\n",
+      "培根三明治\n",
+      "火腿三明治\n",
+      "鮪魚三明治\n",
+      "pastramia沒了\n",
+      "剩下的三明治鮪魚\n",
+      "剩下的三明治火腿\n",
+      "剩下的三明治培根\n",
+      "剩下的三明治歐姆蛋\n",
+      "我愛羅想要去日本\n",
+      "名人想要去天經\n",
+      "織田想要去美國\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1\n",
+    "sandwish_order=[\"鮪魚\",\"火腿\",\"培根\",\"歐姆蛋\"]\n",
+    "finished_sandwish=[]\n",
+    "while sandwish_order:\n",
+    "    the_sandwish=sandwish_order.pop()\n",
+    "    print(f\"我幫你做了{the_sandwish}三明治\")\n",
+    "    finished_sandwish.append(the_sandwish)\n",
+    "print(\"已做完三明治名單\")\n",
+    "for finished_sandwishs in finished_sandwish:\n",
+    "    print(f\"{finished_sandwishs}三明治\")\n",
+    "\n",
+    "#2\n",
+    "sandwish_order=[\"鮪魚\",\"pastrami\",\"火腿\",\"pastrami\",\"培根\",\"歐姆蛋\",\"pastrami\"]\n",
+    "while \"pastrami\" in sandwish_order:\n",
+    "    sandwish_order.remove(\"pastrami\")#去除所有pastrami\n",
+    "print(\"pastramia沒了\")\n",
+    "for sandwish_orders in sandwish_order:\n",
+    "    print(f\"剩下的三明治{sandwish_orders}\")\n",
+    "\n",
+    "#3.\n",
+    "active=True\n",
+    "vacations={}\n",
+    "while active:\n",
+    "    name=input(\"你的名字\")#name=vacations的key\n",
+    "    location=input(\"想去哪\")#location=vacations的value\n",
+    "    vacations[name]=location#將key-value存入\n",
+    "    repeat=input(\"要繼續採訪嗎\")#設定終止條件\n",
+    "    if repeat==\"no\":\n",
+    "        active=False\n",
+    "for name,location in vacations.items():\n",
+    "    print(f\"{name}想要去{location}\")\n",
+    "    "
    ]
   }
  ],
